# obs-life-tracker

./: Makefile  README.md  pyproject.toml
features/: environment.py  update.feature
features/steps/: reset.py  update.py
infra/: Dockerfile  docker-compose.yml
obs_life_tracker/: app.py  fixtures.py
obs_life_tracker/domain/: player.py  state.py
obs_life_tracker/repo/: in_memory.py  interace.py  interface.py  life.py
obs_life_tracker/services/: life.py  state.py
obs_life_tracker/view/: direction.py  game_state.py  total.py
